# synacor-challenge

./: Cargo.toml  LICENSE  README.md  arch-spec  briefintrotointerphysics.txt  dissasembly  function.cpp  journaleast.txt  play_game.sh
src/: brutemaze.rs  calcr7.rs  coinsolver.rs  function.rs  main.rs  mazesolver.rs  u15.rs
