[package]
name = "synacor-challenge"
version = "0.1.0"
authors = ["Michael Auracher <michael.auracher@gmail.com>"]

[[bin]]
name = "synacor-challenge"
path = "src/main.rs"

[[bin]]
name = "coin-solver"
path = "src/coinsolver.rs"

[[bin]]
name = "fun"
path = "src/function.rs"

[[bin]]
name = "brute"
path = "src/brutemaze.rs"