[package]
name = "synacor-challenge"
version = "0.1.0"
authors = ["Michael Auracher <michael.auracher@gmail.com>"]

[lib]
name = "u15"
path = "src/u15.rs"

[[bin]]
name = "synacor-challenge"
path = "src/main.rs"

[[bin]]
name = "coin-solver"
path = "src/coinsolver.rs"

[[bin]]
name = "r7"
path = "src/calcr7.rs"

[[bin]]
name = "maze"
path = "src/mazesolver.rs"